# market-data

./: .gitignore  pyproject.toml
app/: main.py
app/api/: __init__.py  indexes.py
app/core/: config.py
app/models/: __init__.py  indexes.py
app/services/: __init__.py  indexes.py  indicators.py
